# daemomnify

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  HANDOFF.md  README.md  chord_voicing_style_reifyer.py  chords.py  daemomnify.py  daemomnify_settings.json  omnify.py  pyproject.toml  settings.py  wizard.py
.claude/: CLAUDE.md  settings.json
.claude/hooks/: format-cpp.sh  format-py.sh
.github/workflows/: release.yml
chord_analyzer/: chord_mappings.json  extract_chords.py  pyproject.toml
packaging/macos/: distribution.xml
src/: CMakeLists.txt  Daemomnify.cpp  Daemomnify.h  MidiMessageScheduler.cpp  MidiThread.cpp  MidiThread.h  Omnify.cpp  Omnify.h  OmnifyLogger.cpp  OmnifyLogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResourcesPath.h  install.sh  run.sh
src/Resources/: default_settings.json
src/daemomnify/: FileStyle.py  Omni84Style.py  OmnichordStrumStyle.py  PlainAscendingStrumStyle.py  RootPositionStyle.py  TODO.txt  __main__.py  chord_quality.py  chords.py  daemomnify.py  event_dispatcher.py  omnify.py  settings.py  util.py  vst_params.py  (+1 more)
vst/: CMakeLists.txt  DaemonManager.cpp  DaemonManager.h  GeneratedAdditionalSettings.cpp  GeneratedAdditionalSettings.h  GeneratedParams.cpp  GeneratedParams.h  GeneratedSettings.cpp  GeneratedSettings.h  MidiThread.cpp  NoteLearnComponent.cpp  NoteLearnComponent.h  Omnify.cpp  Omnify.h  OmnifyLogger.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResourcesPath.cpp  compile.sh  generate_settings.py  generate_vst_params.py  run.sh
(+79 files in other folders)
